// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render a <table> with a <tr> for each row and a <td> with text for each cell 1`] = `
<styled.table
  color="primary"
  fontFamily="text"
  fontSize="text"
  margin="listMargin"
  textAlign="left"
>
  <StyledComponent
    color="primary"
    fontFamily="text"
    fontSize="text"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "color": "primary",
          "fontFamily": "text",
          "fontSize": "text",
          "margin": "listMargin",
          "textAlign": "left",
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "daBKtD",
          "rules": Array [
            [Function],
          ],
        },
        "displayName": "styled.table",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "table",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    margin="listMargin"
    textAlign="left"
  >
    <table
      className="sc-bdVaJa daBKtD"
      color="primary"
      fontFamily="text"
      fontSize="text"
    >
      <styled.tbody
        color="primary"
        fontFamily="text"
        fontSize="text"
        margin="listMargin"
        textAlign="left"
      >
        <StyledComponent
          color="primary"
          fontFamily="text"
          fontSize="text"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "_foldedDefaultProps": Object {
                "color": "primary",
                "fontFamily": "text",
                "fontSize": "text",
                "margin": "listMargin",
                "textAlign": "left",
              },
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-htpNat",
                "isStatic": false,
                "lastClassName": "kAldGz",
                "rules": Array [
                  [Function],
                ],
              },
              "displayName": "styled.tbody",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-htpNat",
              "target": "tbody",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          margin="listMargin"
          textAlign="left"
        >
          <tbody
            className="sc-htpNat kAldGz"
            color="primary"
            fontFamily="text"
            fontSize="text"
          >
            <styled.tr
              color="primary"
              fontFamily="text"
              fontSize="text"
              margin="listMargin"
              textAlign="left"
            >
              <StyledComponent
                color="primary"
                fontFamily="text"
                fontSize="text"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "_foldedDefaultProps": Object {
                      "color": "primary",
                      "fontFamily": "text",
                      "fontSize": "text",
                      "margin": "listMargin",
                      "textAlign": "left",
                    },
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bxivhb",
                      "isStatic": false,
                      "lastClassName": "diWnNz",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "styled.tr",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bxivhb",
                    "target": "tr",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                margin="listMargin"
                textAlign="left"
              >
                <tr
                  className="sc-bxivhb diWnNz"
                  color="primary"
                  fontFamily="text"
                  fontSize="text"
                >
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 1
                      </td>
                    </StyledComponent>
                  </styled.td>
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 1
                      </td>
                    </StyledComponent>
                  </styled.td>
                </tr>
              </StyledComponent>
            </styled.tr>
            <styled.tr
              color="primary"
              fontFamily="text"
              fontSize="text"
              margin="listMargin"
              textAlign="left"
            >
              <StyledComponent
                color="primary"
                fontFamily="text"
                fontSize="text"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "_foldedDefaultProps": Object {
                      "color": "primary",
                      "fontFamily": "text",
                      "fontSize": "text",
                      "margin": "listMargin",
                      "textAlign": "left",
                    },
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bxivhb",
                      "isStatic": false,
                      "lastClassName": "diWnNz",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "styled.tr",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bxivhb",
                    "target": "tr",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                margin="listMargin"
                textAlign="left"
              >
                <tr
                  className="sc-bxivhb diWnNz"
                  color="primary"
                  fontFamily="text"
                  fontSize="text"
                >
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 2
                      </td>
                    </StyledComponent>
                  </styled.td>
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 2
                      </td>
                    </StyledComponent>
                  </styled.td>
                </tr>
              </StyledComponent>
            </styled.tr>
          </tbody>
        </StyledComponent>
      </styled.tbody>
    </table>
  </StyledComponent>
</styled.table>
`;

exports[`<Table /> should render a <table> with bold text for the header row 1`] = `
<styled.table
  color="primary"
  fontFamily="text"
  fontSize="text"
  margin="listMargin"
  textAlign="left"
>
  <StyledComponent
    color="primary"
    fontFamily="text"
    fontSize="text"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "color": "primary",
          "fontFamily": "text",
          "fontSize": "text",
          "margin": "listMargin",
          "textAlign": "left",
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "daBKtD",
          "rules": Array [
            [Function],
          ],
        },
        "displayName": "styled.table",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "table",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    margin="listMargin"
    textAlign="left"
  >
    <table
      className="sc-bdVaJa daBKtD"
      color="primary"
      fontFamily="text"
      fontSize="text"
    >
      <styled.thead
        color="primary"
        fontFamily="text"
        fontSize="text"
        fontWeight="bold"
        margin="listMargin"
        textAlign="left"
      >
        <StyledComponent
          color="primary"
          fontFamily="text"
          fontSize="text"
          fontWeight="bold"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "_foldedDefaultProps": Object {
                "color": "primary",
                "fontFamily": "text",
                "fontSize": "text",
                "fontWeight": "bold",
                "margin": "listMargin",
                "textAlign": "left",
              },
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "kolAaC",
                "rules": Array [
                  [Function],
                ],
              },
              "displayName": "styled.thead",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "thead",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          margin="listMargin"
          textAlign="left"
        >
          <thead
            className="sc-bwzfXH kolAaC"
            color="primary"
            fontFamily="text"
            fontSize="text"
            fontWeight="bold"
          >
            <styled.tr
              color="primary"
              fontFamily="text"
              fontSize="text"
              margin="listMargin"
              textAlign="left"
            >
              <StyledComponent
                color="primary"
                fontFamily="text"
                fontSize="text"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "_foldedDefaultProps": Object {
                      "color": "primary",
                      "fontFamily": "text",
                      "fontSize": "text",
                      "margin": "listMargin",
                      "textAlign": "left",
                    },
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bxivhb",
                      "isStatic": false,
                      "lastClassName": "diWnNz",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "styled.tr",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bxivhb",
                    "target": "tr",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                margin="listMargin"
                textAlign="left"
              >
                <tr
                  className="sc-bxivhb diWnNz"
                  color="primary"
                  fontFamily="text"
                  fontSize="text"
                >
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 1
                      </td>
                    </StyledComponent>
                  </styled.td>
                  <styled.td
                    color="primary"
                    fontFamily="text"
                    fontSize="text"
                    margin="listMargin"
                    textAlign="left"
                  >
                    <StyledComponent
                      color="primary"
                      fontFamily="text"
                      fontSize="text"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "color": "primary",
                            "fontFamily": "text",
                            "fontSize": "text",
                            "margin": "listMargin",
                            "textAlign": "left",
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "iVQBSZ",
                            "rules": Array [
                              [Function],
                            ],
                          },
                          "displayName": "styled.td",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "td",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      margin="listMargin"
                      textAlign="left"
                    >
                      <td
                        className="sc-ifAKCX iVQBSZ"
                        color="primary"
                        fontFamily="text"
                        fontSize="text"
                      >
                        Row 1
                      </td>
                    </StyledComponent>
                  </styled.td>
                </tr>
              </StyledComponent>
            </styled.tr>
          </thead>
        </StyledComponent>
      </styled.thead>
    </table>
  </StyledComponent>
</styled.table>
`;
